k8s-config/exam-manage-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: exam-manage
  labels:
    name: exam-manage
