k8s-config/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
#        io.kompose.network/exam-manage-front-tier: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - env:
            - name: EXAM_MANAGE_BACKEND_URL
              valueFrom:
                configMapKeyRef:
                  name: backend-config
                  key: backend-url
            - name: EXAM_MANAGE_FRONTEND_SERVER_NAME
              value: localhost
            - name: NGINX_ENVSUBST_OUTPUT_DIR
              value: /etc/nginx
          image: ghcr.io/denwae/exam_manage-frontend:latest
          name: frontend
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
