k8s-config/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
  namespace: exam-manage
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: db
  serviceName: db-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
#        io.kompose.network/exam-manage-back-tier: "true"
        io.kompose.service: db
    spec:
      containers:
        - name: db
          image: bitnami/postgresql-repmgr:14.8.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /pre-stop.sh

          ports:
            - containerPort: 5432 # Nachträglich hinzugefügt, in Docker Compose nicht exposed

          livenessProbe:
            exec:
              command:
                - bash
                - -ec
                - 'PGPASSWORD=$POSTGRES_PASSWORD psql -w -U "postgres" -d "postgres"  -h 127.0.0.1 -c "SELECT 1"'
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6

          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - 'PGPASSWORD=$POSTGRES_PASSWORD psql -w -U "postgres" -d "postgres"  -h 127.0.0.1 -c "SELECT 1"'
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6

          volumeMounts:
            - name: db-data
              mountPath: /bitnami/postgresql

            - name: hook-scripts
              mountPath: /pre-stop.sh
              subPath: pre-stop.sh

          resources: {}

      volumes:
        - name: hook-scripts
          configMap:
            name: db-config
            defaultMode: 0755
      terminationGracePeriodSeconds: 10

  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce" ]
        storageClassName: "standard"
        resources:
          requests:
            storage: 1Gi
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: exam-manage
spec:
  selector:
    io.kompose.service: db # Selber Selector wie oben. Müssen übereinstimmen. Key von kompose definiert
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
