k8s-config/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  type: NodePort # Frontend extern erreichbar machen
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
      nodePort: 30000 # Default Range 30000-32767
  selector:
    io.kompose.service: frontend
