k8s-config/ingress-config.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exam-manage-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
